--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,10 @@
 :root {
     --background-header: #1a242f;
     --gray-pv: #babdc0;
+    --medium-gray-pv: #8196a4;
+    --background-main: #0f171e;
+    --blue-links: #7ab8f3;
+    --light-blue-links: #90dffe;
 }
 
   @media (prefers-color-scheme: dark) {
