--- a/src/app/componentes/header/header.component.scss
+++ b/src/app/componentes/header/header.component.scss
@@ -3,6 +3,8 @@
     width: 100%;
     height: 5rem;
     background-color: var(--background-header);
+    position: sticky;
+    top: 0;
     .header-wrapper{
         width: 95%;
         height: 100%;
