--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
     --background-main: #0f171e;
     --blue-links: #7ab8f3;
     --light-blue-links: #90dffe;
+    --gray-texto: #8197a4;
 }
 
   @media (prefers-color-scheme: dark) {
