--- a/src/app/componentes/header/header.component.scss
+++ b/src/app/componentes/header/header.component.scss
@@ -5,6 +5,12 @@
     background-color: var(--background-header);
     position: sticky;
     top: 0;
+    .svg-flecha{
+        fill: var(--gray-pv);
+        width: 12px;
+        height: 12px;
+        margin: .5rem 0 0 .3rem;
+    }
     .header-wrapper{
         width: 95%;
         height: 100%;
@@ -96,10 +102,106 @@
             }
         }
     }
-    .svg-flecha{
-        fill: var(--gray-pv);
-        width: 12px;
-        height: 12px;
-        margin: .5rem 0 0 .3rem;
+    .categorias-menu{
+        width: 100%;
+        height: 22rem;
+        background-color: #12222f;
+        .h5-categorias{
+            color: white;
+            font-size: 1.1rem;
+            font-weight: 600;
+            margin-bottom: .5rem;
+        }
+        .wrapper-categorias{
+            width: 1500px;
+            height: 100%;
+            // background-color: black;
+            margin: auto;
+            @include flex(row, nowrap, space-between, flex-start);
+            .categorias-izq{
+                flex: 1;
+                height: 100%;
+                padding: 2rem;
+                // background-color: red;
+                position: relative;
+                &::after{
+                    content: '';
+                    position: absolute;
+                    top: 1rem;
+                    right: -1px;
+                    height: 90%;
+                    width: 1px;
+                    background-color: var(--gray-pv);
+                }
+                .wrapper-cat-izq{
+                    margin-left: 10rem;
+                    .ul-principales{
+                        @include flex(row, wrap, flex-start, center);
+                        .li-principales{
+                            @include flex(column, nowrap, center, center);
+                            width: 30%;
+                            height: 6.5rem;
+                            background-color: rgb(40,72,103);
+                            padding: 0rem 1rem;
+                            margin: .7rem .7rem 0 0;
+                            border-radius: .5rem;
+                            text-align: center;
+                            color: white;
+                            font-weight: 600;
+                            border: 2px solid transparent;
+                            cursor: pointer;
+                            &:hover{
+                                border: 2px solid white;
+                            }
+                        }
+                    }
+                }
+            }
+            .categorias-drc{
+                flex: 1;
+                padding: 2rem;
+                // background-color: yellow;
+                height: 100%;
+                // overflow-y: scroll;
+                @include flex(row, nowrap, center, center);
+                .categorias-generos{
+                    flex: 2;
+                    height: 100%;
+                    // background-color: green;
+                    .ul-generos{
+                        margin-left: 1rem; 
+                        @include flex(row, wrap, center, center);
+                        .li-generos{
+                            width: 50%;
+                            color: var(--gray-texto);
+                            margin-bottom: 1rem;
+                            transition: .3s;
+                            cursor: pointer;
+                            &:hover{
+                                color: white;
+                            }
+                        }
+                    }
+                }
+                .categorias-otras{
+                    flex: 1;
+                    height: 100%;
+                    // background-color: lightblue;
+                    .ul-otras{
+                        margin-left: 1rem;
+                        .li-otras{
+                            width: 100%;
+                            color: var(--gray-texto);
+                            margin-bottom: 1rem;
+                            transition: .3s;
+                            cursor: pointer;
+                            &:hover{
+                                color: white;
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
 }
