--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -53,7 +53,7 @@
                     <ul class="ul-principales">
                         <li class="li-principales"
                             *ngFor="let li of ulCategorias; let i = index">
-                            <a href="">{{li.titulo}}</a>
+                            <a [href]=li.src>{{li.titulo}}</a>
                         </li>
                     </ul>
                 </div>
@@ -62,31 +62,18 @@
                 <div class="categorias-generos">
                     <h5 class="h5-categorias">Géneros</h5>
                     <ul class="ul-generos">
-                        <li class="li-generos">Opción 1</li>
-                        <li class="li-generos">Opción 2</li>
-                        <li class="li-generos">Opción 3</li>
-                        <li class="li-generos">Opción 4</li>
-                        <li class="li-generos">Opción 5</li>
-                        <li class="li-generos">Opción 6</li>
-                        <li class="li-generos">Opción 7</li>
-                        <li class="li-generos">Opción 8</li>
-                        <li class="li-generos">Opción 9</li>
-                        <li class="li-generos">Opción 10</li>
-                        <li class="li-generos">Opción 11</li>
-                        <li class="li-generos">Opción 12</li>
-                        <li class="li-generos">Opción 13</li>
-                        <li class="li-generos">Opción 14</li>
+                        <li class="li-generos" *ngFor="let li of ulGeneros; let i = index">
+                            <a [href]=li.src>{{li.titulo}}</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="categorias-otras">
                     <h5 class="h5-categorias">Otras categorías</h5>
                     <ul class="ul-otras">
-                        <li class="li-otras">Opción</li>
-                        <li class="li-otras">Opción</li>
-                        <li class="li-otras">Opción</li>
-                        <li class="li-otras">Opción</li>
-                        <li class="li-otras">Opción</li>
-                        <li class="li-otras">Opción</li>
+                        <li class="li-otras"
+                            *ngFor="let li of ulOtras; let i = index">
+                            <a [href]=li.src>{{li.titulo}}</a>
+                        </li>
                     </ul>
                 </div>
             </div>
