--- a/src/app/componentes/header/header.component.scss
+++ b/src/app/componentes/header/header.component.scss
@@ -106,6 +106,8 @@
         width: 100%;
         height: 22rem;
         background-color: #12222f;
+        pointer-events: none;
+        display: none;
         .h5-categorias{
             color: white;
             font-size: 1.1rem;
